Remove declaration and source maps from TypeScript configuration and delete unused type definition map file

--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -4,6 +4,7 @@
     "module": "ESNext",
     "outDir": "./dist/esm",
     "declaration": false,
-    "declarationMap": false
+    "declarationMap": false,
+    "sourceMap": false
   }
 }
