--- a/package.json
+++ b/package.json
@@ -7,26 +7,33 @@
   "types": "dist/types/index.d.ts",
   "exports": {
     ".": {
+      "types": "./dist/types/index.d.ts",
       "require": "./dist/cjs/index.js",
-      "import": "./dist/esm/index.js",
-      "types": "./dist/types/index.d.ts"
+      "import": "./dist/esm/index.js"
     }
   },
   "sideEffects": false,
   "files": [
-    "dist"
+    "dist/cjs/index.js",
+    "dist/esm/index.js",
+    "dist/types/index.d.ts"
   ],
   "scripts": {
-    "build": "npm run build:cjs && npm run build:esm && npm run build:types",
+    "build": "npm run clean && npm run build:bundle && npm run build:types",
+    "build:bundle": "node build.js",
+    "build:types": "dts-bundle-generator -o dist/types/index.d.ts src/index.ts --no-banner --no-check",
+    "build:types:fallback": "tsc -p tsconfig.json --emitDeclarationOnly --declaration --declarationDir dist/types",
+    "build:dev": "npm run build:cjs && npm run build:esm && npm run build:types:fallback",
     "build:cjs": "tsc -p tsconfig.json",
     "build:esm": "tsc -p tsconfig.esm.json",
-    "build:types": "tsc -p tsconfig.json --emitDeclarationOnly --declaration --declarationDir dist/types",
+    "clean": "node -e \"fs.rmSync('dist',{recursive:true,force:true})\"",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "lint": "eslint src --ext .ts,.tsx",
     "typecheck": "tsc --noEmit",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "size": "node -e \"const f=require('fs');const e=f.statSync('dist/esm/index.js').size;const c=f.statSync('dist/cjs/index.js').size;console.log('ESM:',(e/1024).toFixed(2)+'KB','CJS:',(c/1024).toFixed(2)+'KB','Total:',((e+c)/1024).toFixed(2)+'KB')\""
   },
   "keywords": [
     "react",
@@ -60,10 +67,13 @@
     "@types/jest": "^29.5.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "dts-bundle-generator": "^9.5.1",
+    "esbuild": "^0.27.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "terser": "^5.44.1",
     "ts-jest": "^29.1.0",
     "typescript": "^5.3.0"
   },
